--- a/style.css
+++ b/style.css
@@ -26,18 +26,22 @@ a:hover {
     z-index: 100000;
     background: #FFFFFF url("img/pageload-spinner.gif") no-repeat center center;
 }
-
+a{
+    text-decoration: none;
+}
 .bloc {
     width: 100%;
     clear: both;
     background: 50% 50% no-repeat;
-    padding: 0 50px;
+    padding: 0 12px;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     position: relative;
+    background-color: #F3976C;
 }
+
 
 .bloc .container {
     padding-left: 0;
@@ -100,7 +104,8 @@ a:hover {
 }
 
 .d-bloc {
-    color: rgba(255, 255, 255, .7);
+    color:black;
+    
 }
 
 .d-bloc button:hover {
@@ -317,7 +322,7 @@ a:hover {
 
 .navbar .nav {
     padding-top: 2px;
-    margin-right: -16px;
+    margin-right: 27px;
     float: right;
     z-index: 1;
 }
@@ -326,6 +331,8 @@ a:hover {
     float: left;
     margin-top: 4px;
     font-size: 16px;
+    margin-left: 25px;
+    list-style: none;
 }
 
 .navbar-nav .open .dropdown-menu > li > a {
@@ -677,9 +684,18 @@ a {
 }
 
 p {
-    font-size: 11px;
-}
+    font-size: 14px;
+   }
+ul{
+    font-size: 18px;
 
+    }
+  
+    
+li {
+    font-size: 14px;
+   
+}
 .tight-width-whitespace {
     max-width: 600px;
     margin: auto auto auto auto;
@@ -721,13 +737,16 @@ h3 {
     margin: auto auto auto auto;
     box-shadow: 0px 0px 0px #000000;
 }
+.offres{
+    font-size: 24px;
+}
 
 h1 {
     color: #333333!important;
 }
 
 h4 {
-    color: #333333!important;
+    color: white !important;
 }
 
 .icons {
@@ -770,9 +789,7 @@ h4 {
     background-color: #364577;
 }
 
-.bgc-atomic-tangerine {
-    background-color: #F3976C;
-}
+
 
 .tc-white {
     color: #F3976C!important;
@@ -890,6 +907,11 @@ h4 {
 }
 
 @media (max-width: 767px) {
+
+    .nav{
+        display: flex;
+        
+    }
     .page-container {
         overflow-x: hidden;
         position: relative;
@@ -912,6 +934,7 @@ h4 {
         padding-top: 0;
         border-top: 1px solid rgba(0, 0, 0, .2);
         float: none!important;
+      
     }
     .navbar.row {
         margin-left: 0;
