--- a/style.css
+++ b/style.css
@@ -868,6 +868,7 @@ h4 {
     .nav-center.navbar .nav {
         max-width: 100%
     }
+  
 }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
@@ -909,12 +910,14 @@ h4 {
         padding-left: constant(safe-area-inset-left);
         padding-right: constant(safe-area-inset-right);
     }
+
 }
 
 @media (max-width: 767px) {
 
     .nav{
         display: flex;
+        flex-direction: row;
         
     }
     .page-container {
